// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all flights query should return array of flights 1`] = `
Object {
  "data": Object {
    "allFlights": Object {
      "edges": Array [
        Object {
          "node": Object {
            "airlines": Array [
              Object {
                "code": "DY",
                "isLowCost": true,
                "logoUrl": "https://images.kiwi.com/airlines/64/DY.png",
                "name": "Norwegian",
              },
              Object {
                "code": "UA",
                "isLowCost": false,
                "logoUrl": "https://images.kiwi.com/airlines/64/UA.png",
                "name": "United Airlines",
              },
            ],
            "arrival": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": "2017-09-01T21:50:00.000Z",
              "time": "2017-09-02T02:50:00.000Z",
            },
            "departure": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": "2017-08-30T21:55:00.000Z",
              "time": "2017-08-30T19:55:00.000Z",
            },
            "duration": 3295,
            "id": "RmxpZ2h0OjMxMzIyNTIxMHwzMTMzNTczOTZ8RUoyOTI4NTYyMDg5XzQyMTgwMjM4OHxFSjI5Mjg1NjIwODlfMzU5NTEzNzY1",
          },
        },
        Object {
          "node": Object {
            "airlines": Array [
              Object {
                "code": "OK",
                "isLowCost": false,
                "logoUrl": "https://images.kiwi.com/airlines/64/OK.png",
                "name": "Czech Airlines",
              },
              Object {
                "code": "DY",
                "isLowCost": true,
                "logoUrl": "https://images.kiwi.com/airlines/64/DY.png",
                "name": "Norwegian",
              },
              Object {
                "code": "4O",
                "isLowCost": true,
                "logoUrl": "https://images.kiwi.com/airlines/64/4O.png",
                "name": "Interjet (ABC Aerolineas)",
              },
            ],
            "arrival": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": "2017-09-08T16:05:00.000Z",
              "time": "2017-09-08T21:05:00.000Z",
            },
            "departure": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": "2017-09-06T11:40:00.000Z",
              "time": "2017-09-06T09:40:00.000Z",
            },
            "duration": 3565,
            "id": "RmxpZ2h0OkVKMTU3NDYxODM1M18zMDc5MzkyNjR8MzE0MzE2MjQwfDMxNjMyODg2OA==",
          },
        },
        Object {
          "node": Object {
            "airlines": Array [
              Object {
                "code": "DY",
                "isLowCost": true,
                "logoUrl": "https://images.kiwi.com/airlines/64/DY.png",
                "name": "Norwegian",
              },
              Object {
                "code": "4O",
                "isLowCost": true,
                "logoUrl": "https://images.kiwi.com/airlines/64/4O.png",
                "name": "Interjet (ABC Aerolineas)",
              },
            ],
            "arrival": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": "2017-09-08T16:05:00.000Z",
              "time": "2017-09-08T21:05:00.000Z",
            },
            "departure": Object {
              "airport": Object {
                "city": Object {
                  "name": "Mocked City Name",
                },
                "locationId": "MOCKED",
              },
              "localTime": "2017-09-06T12:25:00.000Z",
              "time": "2017-09-06T10:25:00.000Z",
            },
            "duration": 3520,
            "id": "RmxpZ2h0OjMyMTMzNzkwM3wzMTQzMTYyNDB8MzE2MzI4ODY4",
          },
        },
      ],
    },
  },
}
`;

exports[`all flights query should return error if dateFrom is after dateTo 1`] = `
Object {
  "data": Object {
    "allFlights": null,
  },
  "errors": Array [
    [GraphQLError: Date 'from' in the range should start before date 'to'.],
  ],
}
`;

exports[`all flights query should return error if invalid date format is passed 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Variable "$input" got invalid value {"from":{"location":"PRG"},"to":{"location":"MEX"},"date":{"from":"08/08/2017","to":"2017-09-08"}}; Expected type Date at value.date.from; Date cannot represent an invalid date-string 08/08/2017.],
  ],
}
`;
